--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -1,15 +1,42 @@
-@import "tailwindcss";
-
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
-
+html, body {
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+}
+
+.form-container {
+  padding: 20px;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+.form-grid {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 15px;
+  align-items: baseline;
+  margin-bottom: 20px;
+}
+
+.form-input {
+  padding: 8px;
+  width: 100%;
+}
+
+.form-submit {
+  cursor: pointer;
+  margin-inline-end: 8px;
+}
+
+.title-description {
+  white-space: pre-line;
+}
+
+.title-contents {
+  list-style: none;
+  padding-inline-start: 0;
+}
+
+.title-content-synopsis {
+  white-space: pre-line;
 }
